--- a/src/components/message/Message.module.css
+++ b/src/components/message/Message.module.css
@@ -3,7 +3,8 @@
     display: flex;
     gap: 1rem;
     align-items: center;
-     border-radius: 0.5rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
 }
 .avatarCard{
     border-radius: 50%;
